--- a/index.html
+++ b/index.html
@@ -53,6 +53,30 @@
         <div id="inputBox">
             <h3 id="date"></h3>
             <div>
+                <table>
+                    <tr>
+                        <td>
+                            <button id="now" title="Set time to now"><img src="data/now.svg"></button>
+                        </td>
+                        <td>
+                            <button id="reverse" title="Slow/reverse time"><img src="data/rewind.svg"></button>
+                        </td>
+                        <td id="speedfield">
+                            <span id="speed"></span><br>
+                        </td>
+                        <td>
+                            <button id="forward" title="Advance time"><img src="data/ff.svg"></button>
+                        </td>
+                        <td>
+                            <button id="play" title="Play/pause"><img id="playpause" src="data/pause.svg"></button>
+                        </td>
+                    </tr>
+                    <tr class="extraData">
+                        <td colspan="5">
+                            MJD:&nbsp;<span id="mjd"></span>&nbsp;&nbsp;&bull;&nbsp;&nbsp;LST:&nbsp;<span id="lst"></span>&deg;
+                        </td>
+                    </tr>
+                </table>
                 <div id="info">
                     <a id="infohead" href="" target="_blank"></a><br>
                     <a href="" target="_blank"><img src="" class="wikipic"></a><br>
