--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
                 <img id="logo" src="data/logo.svg">
             </div>
             <div id="splash-content-container">
+                <script>
+                    if (/Mobi|Android/i.test(navigator.userAgent)) {
+                        document.getElementById('splash-content-container').hidden = true;
+                    }
+                </script>
                 <p>Seems like you are not going to be fossilized today...</p>
                 <p>Data courtesy of <a href="http://nasa.gov" target="_blank">NASA</a>, <a href="http://jpl.nasa.gov" target="_blank">JPL</a>, <a href="http://en.wikipedia.org" target="_blank">Wikipedia</a>, and <a href="https://www.solarsystemscope.com" target="_blank">Solar System Scope</a>.</p>
                 <button id="clearSplash">Close</button>
